Kenny Micro Finance System

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
   
   {% block content %}
 
-	 <center> <h1 style="color: green; margin: 20px;">PASSY MICRO FINANCE LTD</h1>
+	 <center> <h1 style="color: green; margin: 20px;">KENNY MICRO FINANCE LTD</h1>
 	 </center> 
 
 
