--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,10 +17,11 @@
 	<br>
 
  <h3 style="color: royalblue;">
-We are Located in Mtwapa,  Mombasa.<br>
-Mkilifi Avenue, Cool Plaza, Room No. 4 <br>
-Email : passycash@gmail.coom <br>
-Contact : 0741889311 
+We are Located at Bombolulu, <br>
+Opposite Ziwa La Ng'ombe Secondary Scchool,<br>
+Mombasa, Kenya. <br>
+Email : kennexploit@gmail.com <br>
+Contact : 0743320764
 </h3>
 </center>
 
