--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@ li a:hover:not(.active) {
   <br>
   <br>
   <br>
-   <center> <h1 style="color: green; margin: 20px;">PASSY MICRO FINANCE LTD</h1>
+   <center> <h1 style="color: green; margin: 20px;">KENNY MICRO FINANCE LTD</h1>
    </center>
 
 <img src="{%  static 'images/pesa.jpg' %}" width="475px" height="393px" style="float: right; margin: 30px;">
@@ -67,7 +67,7 @@ li a:hover:not(.active) {
       <p style="float: right; color: skyblue; float: right;" >
         &reg; Lipa Mdogo Mdogo <p>
 
-       <h3 style="color:blue;">&copy; Passy Micro Finance LTD, 2023</h3> 
+       <h3 style="color:blue;">&copy; Kenny Micro Finance LTD, 2023</h3> 
 
 
 
