--- a/templates/loan.html
+++ b/templates/loan.html
@@ -34,7 +34,7 @@
       </center>
       <p style="float: right; color: skyblue; " ,>Kennedy &reg;<p>
 
-       <h3 style="color:maroon;">&copy; Passy Micro Finance LTD, 2023</h3> 
+       <h3 style="color:maroon;">&copy; Kenny Micro Finance LTD, 2023</h3> 
 
 
           
